# bragi

./: Cargo.toml  bragi_internals.hpp  cpp_generator.py  idl.py  meson.build  meson.options  pyproject.toml  sample.idl  setup.py  tokens.py
.github/workflows/: ci.yml
bragi/: __init__.py  __main__.py  cli.py  cpp_generator.py  parser.py  rust_generator.py  tokens.py  types.py  wireshark_generator.py
include/bragi/: helpers-all.hpp  helpers-frigg.hpp  helpers-std.hpp  internals.hpp
rust/bragi/: Cargo.toml  README.md
rust/bragi-build/: Cargo.toml  LICENSE  README.md
rust/bragi-build/src/: lib.rs
rust/bragi-tests/: Cargo.toml  build.rs
rust/bragi-tests/src/: lib.rs
rust/bragi/src/: lib.rs
tests/: meson.build  test-util.hpp
tests/arrays/: arrays.bragi  arrays.cpp  meson.build
tests/basic/: basic.bragi  basic.cpp  meson.build
tests/empty/: empty.bragi  empty.cpp  meson.build
tests/enums/: enums.bragi  enums.cpp  meson.build
tests/group/: group.bragi  group.cpp
tests/preamble/: meson.build  preamble.bragi  preamble.cpp
tests/struct/: meson.build  struct.bragi  struct.cpp
tests/using/: meson.build  using.bragi  using.cpp
vim/ftdetect/: bragi.vim
vim/syntax/: bragi.vim
