[project]
name = "bragi"
version = "0.7"
authors = [
    # Original implementation by Kacper Słomiński.
    { name = "The Managarm Project", email = "info@managarm.org" },
]
license = "MIT"

dependencies = ["lark-parser"]

[project.urls]
Repository = "https://github.com/managarm/bragi"

[project.scripts]
bragi = "bragi.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bragi"]
